--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-<svg width="100%" height="600"></svg>
+<svg width="900" height="600"></svg>
 <script>
 
 var svg = d3.select("svg"),
