--- a/index.html
+++ b/index.html
@@ -1,95 +1,97 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-<head>
-<title>GRAPH</title>
-<style>
+	<head>
+		<title>GRAPH</title>
+		<style>
 
 .links line {
-  stroke: #aaa;
+	stroke: #aaa;
 }
 
 .nodes circle {
-  pointer-events: all;
-  stroke: none;
-  stroke-width: 40px;
+	pointer-events: all;
+	stroke: none;
+	stroke-width: 40px;
 }
 
-</style>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-</head>
-<body>
-<svg width="900" height="600"></svg>
-<script>
+		</style>
+		<script src="https://d3js.org/d3.v4.min.js"></script>
+	</head>
+	<body>
+		<svg width="900" height="600"></svg>
+		<script>
 
 var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height");
+		width = +svg.attr("width"),
+		height = +svg.attr("height");
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody())
-    .force("center", d3.forceCenter(width / 2, height / 2));
+	.force("link", d3.forceLink().id(function(d) { return d.id; }))
+	.force("charge", d3.forceManyBody())
+	.force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("graph.json", function(error, graph) {
-  if (error) throw error;
+	d3.json("graph.json", function(error, graph) {
+		if (error) throw error;
 
-  var link = svg.append("g")
-      .attr("class", "links")
-    .selectAll("line")
-    .data(graph.links)
-    .enter().append("line");
+		var link = svg.append("g")
+			.attr("class", "links")
+			.selectAll("line")
+			.data(graph.links.filter(function(d){return d.type == "company_company"}))
+			.enter().append("line");
+		console.log(graph.links.filter(function(d){return d.type == "company_company"}))
 
-  var node = svg.append("g")
-      .attr("class", "nodes")
-    .selectAll("circle")
-    .data(graph.nodes)
-    .enter().append("circle")
-      .attr("r", 2.5)
-      .call(d3.drag()
-          .on("start", dragstarted)
-          .on("drag", dragged)
-          .on("end", dragended));
+		var node = svg.append("g")
+			.attr("class", "nodes")
+			.selectAll("circle")
+			.data(graph.nodes.filter(function(d){return d.group==1}))
+			.enter().append("circle")
+			.attr("r", 2.5)
+			.attr("fill", function(d) {if (d.group == 1) { return "red";} else {return "blue";}})
+			.call(d3.drag()
+					.on("start", dragstarted)
+					.on("drag", dragged)
+					.on("end", dragended));
 
-  node.append("title")
-      .text(function(d) { return d.id; });
+		node.append("title")
+			.text(function(d) { return d.id; });
 
-  simulation
-      .nodes(graph.nodes)
-      .on("tick", ticked);
+		simulation
+			.nodes(graph.nodes)
+			.on("tick", ticked);
 
-  simulation.force("link")
-      .links(graph.links);
+		simulation.force("link")
+			.links(graph.links);
 
-  function ticked() {
-    link
-        .attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
+		function ticked() {
+			link
+				.attr("x1", function(d) { return d.source.x; })
+				.attr("y1", function(d) { return d.source.y; })
+				.attr("x2", function(d) { return d.target.x; })
+				.attr("y2", function(d) { return d.target.y; });
 
-    node
-        .attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  }
-});
+			node
+				.attr("cx", function(d) { return d.x; })
+				.attr("cy", function(d) { return d.y; });
+		}
+	});
 
 function dragstarted(d) {
-  if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-  d.fx = d.x;
-  d.fy = d.y;
+	if (!d3.event.active) simulation.alphaTarget(0.3).restart();
+	d.fx = d.x;
+	d.fy = d.y;
 }
 
 function dragged(d) {
-  d.fx = d3.event.x;
-  d.fy = d3.event.y;
+	d.fx = d3.event.x;
+	d.fy = d3.event.y;
 }
 
 function dragended(d) {
-  if (!d3.event.active) simulation.alphaTarget(0);
-  d.fx = null;
-  d.fy = null;
+	if (!d3.event.active) simulation.alphaTarget(0);
+	d.fx = null;
+	d.fy = null;
 }
-</script>
-</body>
+		</script>
+	</body>
 </html>
